--- a/rooty-next/package.json
+++ b/rooty-next/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
     "@mui/styled-engine-sc": "^5.10.6",
+    "axios": "^1.1.3",
     "framer-motion": "^7.6.1",
     "next": "12.3.1",
     "react": "18.2.0",
