--- a/rooty-next/package.json
+++ b/rooty-next/package.json
@@ -17,12 +17,15 @@
     "@mui/material": "^5.10.10",
     "@mui/styled-engine-sc": "^5.10.6",
     "axios": "^1.1.3",
+    "date-and-time": "^2.4.1",
     "framer-motion": "^7.6.1",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.3",
+    "socket.io": "^4.5.3",
+    "socket.io-client": "^4.5.3",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
