--- a/rooty-next/.env
+++ b/rooty-next/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:Password!@localhost:5432/mydb?schema=public"
+DATABASE_URL="postgresql://postgres:Password!@localhost:5432/testdbforrooty?schema=public"
