--- a/rooty-next/package.json
+++ b/rooty-next/package.json
@@ -2,6 +2,10 @@
   "name": "rooty-next",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -23,6 +27,7 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
     "@mui/styled-engine-sc": "^5.10.6",
+    "@prisma/client": "^4.5.0",
     "axios": "^1.1.3",
     "date-and-time": "^2.4.1",
     "framer-motion": "^7.6.1",
