--- a/rooty-next/package.json
+++ b/rooty-next/package.json
@@ -2,7 +2,6 @@
   "name": "rooty-next",
   "version": "0.1.0",
   "private": true,
-  
   "prisma": {
     "seed": "node prisma/seed.js"
   },
@@ -28,8 +27,11 @@
     "@mui/material": "^5.10.10",
     "@mui/styled-engine-sc": "^5.10.6",
     "@prisma/client": "^4.5.0",
+    "aws-sdk": "^2.1236.0",
     "axios": "^1.1.3",
+    "crypto": "^1.0.1",
     "date-and-time": "^2.4.1",
+    "dotenv": "^16.0.3",
     "framer-motion": "^7.6.1",
     "next": "12.3.1",
     "react": "18.2.0",
@@ -38,7 +40,8 @@
     "semantic-ui-react": "^2.1.3",
     "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
