--- a/rooty-next/.env
+++ b/rooty-next/.env
@@ -1,2 +1,2 @@
 DATABASE_URL="postgresql://postgres:230875@localhost:5432/testdbforrooty?schema=public"
-DATABASE_URL="postgresql://postgres:cocoa@localhost:5432/testdbforrooty?schema=public"
+# DATABASE_URL="postgresql://postgres:cocoa@localhost:5432/testdbforrooty?schema=public"
