--- a/rooty-next/package.json
+++ b/rooty-next/package.json
@@ -36,6 +36,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.4.2",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.3",
     "socket.io": "^4.5.3",
