--- a/rooty-next/package.json
+++ b/rooty-next/package.json
@@ -29,11 +29,13 @@
     "@prisma/client": "^4.5.0",
     "aws-sdk": "^2.1236.0",
     "axios": "^1.1.3",
+    "bcrypt": "^5.1.0",
     "crypto": "^1.0.1",
     "date-and-time": "^2.4.1",
     "dotenv": "^16.0.3",
     "framer-motion": "^7.6.1",
     "next": "12.3.1",
+    "next-auth": "^4.17.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.4.2",
