--- a/rooty-next/package.json
+++ b/rooty-next/package.json
@@ -43,8 +43,6 @@
     "react-router-dom": "^6.4.2",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.3",
-    "socket.io": "^4.5.3",
-    "socket.io-client": "^4.5.3",
     "styled-components": "^5.3.6",
     "util": "^0.12.5"
   },
@@ -63,6 +61,7 @@
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
     "eslint-plugin-storybook": "^0.6.6",
-    "prisma": "^4.5.0"
+    "prisma": "^4.5.0",
+    "jose": "^4.11.1"
   }
 }
