--- a/rooty-next/package.json
+++ b/rooty-next/package.json
@@ -27,6 +27,7 @@
     "@mui/material": "^5.10.10",
     "@mui/styled-engine-sc": "^5.10.6",
     "@prisma/client": "^4.5.0",
+    "javascript-time-ago": "^2.5.7",
     "aws-sdk": "^2.1236.0",
     "axios": "^1.1.3",
     "bcrypt": "^5.1.0",
