--- a/rooty-next/package.json
+++ b/rooty-next/package.json
@@ -27,7 +27,6 @@
     "@mui/material": "^5.10.10",
     "@mui/styled-engine-sc": "^5.10.6",
     "@prisma/client": "^4.5.0",
-    "javascript-time-ago": "^2.5.7",
     "aws-sdk": "^2.1236.0",
     "axios": "^1.1.3",
     "bcrypt": "^5.1.0",
@@ -35,10 +34,12 @@
     "date-and-time": "^2.4.1",
     "dotenv": "^16.0.3",
     "framer-motion": "^7.6.1",
+    "javascript-time-ago": "^2.5.7",
+    "lottie-react": "^2.3.1",
     "next": "12.3.1",
+    "next-auth": "^4.17.0",
     "pusher": "^5.1.1-beta",
     "pusher-js": "^7.5.0",
-    "next-auth": "^4.17.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.4.2",
@@ -62,7 +63,7 @@
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
     "eslint-plugin-storybook": "^0.6.6",
-    "prisma": "^4.5.0",
-    "jose": "^4.11.1"
+    "jose": "^4.11.1",
+    "prisma": "^4.5.0"
   }
 }
